--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'kotlin-kapt'
 apply from: 'apks.gradle'
 apply from: 'version.gradle'
 
+apply plugin: 'realm-android'
+
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -24,12 +26,17 @@ android {
         all {
             generateName(applicationVariants)
             buildConfigField 'String', 'API_URL', "\"https://www.flickr.com/\""
+            buildConfigField 'String', 'API_KEY', "\"3eb2458057f4704220348372e0e8dd02\""
         }
         release {
             debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -45,7 +52,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // DI
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:dagger-compiler:2.16"
     implementation "com.google.dagger:dagger:2.23.2"
 
@@ -53,9 +59,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
     implementation "io.reactivex.rxjava2:rxjava:2.2.10"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.2.0'
-    implementation "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar"
-    implementation "com.jakewharton.rxrelay2:rxrelay:2.1.0"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
@@ -73,4 +76,6 @@ dependencies {
     // Other
     implementation "com.jakewharton.timber:timber:4.7.1"
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    implementation "org.jetbrains.anko:anko:0.10.8"
 }
